--- a/deliverables/rocky/monasca-thresh.yaml
+++ b/deliverables/rocky/monasca-thresh.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: 5f76cf1668ee827155c3cb4c736575de96a5a5a2
         repo: openstack/monasca-thresh
     version: 2.3.0
+branches:
+  - location: 2.3.0
+    name: stable/rocky
