--- a/deliverables/rocky/monasca-api.yaml
+++ b/deliverables/rocky/monasca-api.yaml
@@ -10,3 +10,10 @@ releases:
       - hash: 9ebde65af90c039a346767a5070d79ff809503ef
         repo: openstack/monasca-api
     version: 2.6.0
+  - projects:
+      - hash: 471c0fb8ce47d0f1e78381ddb48599f53645a641
+        repo: openstack/monasca-api
+    version: 2.7.0
+branches:
+  - location: 2.7.0
+    name: stable/rocky
