--- a/deliverables/rocky/ironic.yaml
+++ b/deliverables/rocky/ironic.yaml
@@ -17,3 +17,12 @@ releases:
 branches:
   - location: 11.1.0
     name: stable/rocky
+cycle-highlights:
+  - Added the ability to define groups of conductors and nodes, enabling
+    operators to define specific failure or management domains.
+  - Added ability to manage BIOS settings, with driver support
+    for iRMC and iLO hardware types.
+  - Added automatic recovery from power faults, removing a long
+    standing headache for operators.
+  - Added a ramdisk deployment interface enabling high performance
+    computing deployments to have diskless nodes.
