--- a/deliverables/rocky/glance.yaml
+++ b/deliverables/rocky/glance.yaml
@@ -9,6 +9,21 @@ branches:
   - name: feature/policy-refactor
     location:
       openstack/glance: ca51cb84650da93c52a26b2581f0582f0a280c11
+  - name: stable/rocky
+    location: 17.0.0.0rc1
+cycle-highlights:
+  - Secure Hash Algorithm Support, which allows operators to configure
+    a self-describing secure hash that can be used by image consumers
+    to verify image data integrity
+  - Introduction of "hidden" images, a popular operator request that
+    enables operators to keep outdated public images hidden from the
+    default image-list response yet still available for server rebuilds
+  - The glance-manage utility has been updated to address OpenStack
+    Security Note OSSN-0075
+  - An implementation of multiple backend support, which allows operators
+    to configure multiple stores and allows end users to direct image data
+    to a specific store, is introduced as the EXPERIMENTAL Image Service
+    API version 2.8
 releases:
   - version: 17.0.0.0b1
     projects:
@@ -22,5 +37,9 @@ releases:
     projects:
       - repo: openstack/glance
         hash: ff77f59bd4376be3bed8f8c62258f9973b7ef1f2
+  - version: 17.0.0.0rc1
+    projects:
+      - repo: openstack/glance
+        hash: 688426625171264f0bc2c56f496a4ce13a3de93f
 repository-settings:
   openstack/glance: {}
