--- a/deliverables/rocky/neutron-dynamic-routing.yaml
+++ b/deliverables/rocky/neutron-dynamic-routing.yaml
@@ -19,3 +19,10 @@ releases:
       - hash: 93a8b15840c945a497eb886a16e2dbdd88e76f59
         repo: openstack/neutron-dynamic-routing
     version: 13.0.0.0b3
+  - projects:
+      - hash: ac63f126c6bd0ab12d6cd80077023c3e5c264e98
+        repo: openstack/neutron-dynamic-routing
+    version: 13.0.0.0rc1
+branches:
+  - location: 13.0.0.0rc1
+    name: stable/rocky
