--- a/deliverables/rocky/neutron-fwaas.yaml
+++ b/deliverables/rocky/neutron-fwaas.yaml
@@ -19,3 +19,10 @@ releases:
       - hash: d6258868989dc3d11207a02082c361b8a7c1a9dc
         repo: openstack/neutron-fwaas
     version: 13.0.0.0b3
+  - projects:
+      - hash: 5b3ac1ebda160e80ba3a38c1f113f85b797572d6
+        repo: openstack/neutron-fwaas
+    version: 13.0.0.0rc1
+branches:
+  - location: 13.0.0.0rc1
+    name: stable/rocky
