Move ironic-tempest-plugin release to rocky
The last ironic-tempest-plugin release was for rocky but was done under
as an independent release. This just moves the existing release under
the rocky deliverable file so it shows up as part of this release cycle.

Change-Id: Ie4417cc0a72f1f3f3124f091d51f37dfe05d9157
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/ironic-tempest-plugin.yaml
+++ b/deliverables/rocky/ironic-tempest-plugin.yaml
@@ -5,5 +5,10 @@ release-model: cycle-with-intermediary
 release-type: python-pypi
 repository-settings:
   openstack/ironic-tempest-plugin: {}
+releases:
+  - projects:
+      - hash: 3dc8f79c86b5b4dafb1c2ae9e38baae5a725af32
+        repo: openstack/ironic-tempest-plugin
+    version: 1.2.0
 team: ironic
 type: tempest-plugin
