--- a/deliverables/rocky/ceilometer-powervm.yaml
+++ b/deliverables/rocky/ceilometer-powervm.yaml
@@ -3,6 +3,9 @@ launchpad: ceilometer-powervm
 release-model: cycle-with-milestones
 team: PowerVMStackers
 type: other
+branches:
+  - name: stable/rocky
+    location: 7.0.0.0rc1
 releases:
   - version: 7.0.0.0b1
     projects:
@@ -13,6 +16,10 @@ releases:
       - repo: openstack/ceilometer-powervm
         hash: f89854d2f2244f596df6d37436244c62b1cbd929
   - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/ceilometer-powervm
+        hash: 1bd1f9e639f07b4f53be30ee887f9cced5d80d2a
+  - version: 7.0.0.0rc1
     projects:
       - repo: openstack/ceilometer-powervm
         hash: 1bd1f9e639f07b4f53be30ee887f9cced5d80d2a
