--- a/deliverables/rocky/vitrage-dashboard.yaml
+++ b/deliverables/rocky/vitrage-dashboard.yaml
@@ -5,8 +5,17 @@ team: vitrage
 type: horizon-plugin
 repository-settings:
   openstack/vitrage-dashboard: {}
+branches:
+  - location: 1.6.0
+    name: stable/rocky
 releases:
   - version: 1.5.0
     projects:
       - repo: openstack/vitrage-dashboard
         hash: f529174252389695f9088477e272f4a436655bfa
+  - version: 1.6.0
+    projects:
+      - repo: openstack/vitrage-dashboard
+        hash: 598596ad6ca77e14fe04415e2ce960c3da23d8b8
+cycle-highlights:
+  - 'New UI for alarm history'
