--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -140,5 +140,9 @@ releases:
       - hash: 611e8395a1d60b9748047822e834a115162f2644
         repo: openstack/openstackdocstheme
     version: 1.21.1
+  - projects:
+      - hash: 8818143384b95745a2474e184ea90d6d35436f0f
+        repo: openstack/openstackdocstheme
+    version: 1.21.2
 repository-settings:
   openstack/openstackdocstheme: {}
