--- a/deliverables/rocky/python-blazarclient.yaml
+++ b/deliverables/rocky/python-blazarclient.yaml
@@ -19,6 +19,10 @@ releases:
     projects:
       - repo: openstack/python-blazarclient
         hash: f017a924d301bed939f8811923c83b9a41740560
+  - version: 2.0.1
+    projects:
+      - repo: openstack/python-blazarclient
+        hash: ef481e8d9a99a0d2bb7b3f43370dc7a96583b8f6
 branches:
   - name: stable/rocky
     location: 2.0.0
