--- a/deliverables/rocky/designate-dashboard.yaml
+++ b/deliverables/rocky/designate-dashboard.yaml
@@ -19,3 +19,10 @@ releases:
       - hash: e41d74a03d46d678c3e86bf98703bcc16dff71f6
         repo: openstack/designate-dashboard
     version: 7.0.0.0b3
+  - projects:
+      - hash: 3f5a3294a65cbcd5485f4f705984f30091fff9ad
+        repo: openstack/designate-dashboard
+    version: 7.0.0.0rc1
+branches:
+  - location: 7.0.0.0rc1
+    name: stable/rocky
