Force release python-karborclient for rocky
Forces release of committed changes this cycle and creates a
stable/rocky branch.

Change-Id: I89172468471f7c1700ea713e856dfc0f3cf9ac90
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/python-karborclient.yaml
+++ b/deliverables/rocky/python-karborclient.yaml
@@ -4,5 +4,15 @@ launchpad: python-karborclient
 release-model: cycle-with-intermediary
 team: karbor
 type: client-library
+releases:
+  - projects:
+      - hash: 7aca76b32b6f89774ab1659a90bcba08b62a1700
+        repo: openstack/python-karborclient
+    version: 1.1.0
+    flags:
+      - forced
 repository-settings:
   openstack/python-karborclient: {}
+branches:
+  - location: 1.1.0
+    name: stable/rocky
