--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: 816c2c04794296ded34ba231a12fba7b7ab5790a
         repo: openstack/ironic
     version: 10.1.3
+  - projects:
+      - hash: 21b199b586959cdedd92543a3d1bf2252907f67c
+        repo: openstack/ironic
+    version: 10.1.4
 branches:
   - location: 10.1.0
     name: stable/queens
