--- a/deliverables/queens/zun.yaml
+++ b/deliverables/queens/zun.yaml
@@ -8,6 +8,10 @@ releases:
     projects:
       - repo: openstack/zun
         hash: 2121dab9c24cfd319c6192326c5275197c8c907e
+  - version: 1.0.1
+    projects:
+      - repo: openstack/zun
+        hash: db0cea7121628d6d27e0beaa10b989be33dad37e
 branches:
   - name: stable/queens
     location: 1.0.0
