--- a/deliverables/rocky/barbican.yaml
+++ b/deliverables/rocky/barbican.yaml
@@ -18,3 +18,10 @@ releases:
       - hash: 1baaacfa3ad9ca4d39c9c5f9a103298758b7d182
         repo: openstack/barbican
     version: 7.0.0.0b3
+  - projects:
+      - hash: 3f6cccae4982e5a8fe1ca5a3fb198e1481a5891c
+        repo: openstack/barbican
+    version: 7.0.0.0rc1
+branches:
+  - location: 7.0.0.0rc1
+    name: stable/rocky
