--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -144,5 +144,9 @@ releases:
       - hash: 8818143384b95745a2474e184ea90d6d35436f0f
         repo: openstack/openstackdocstheme
     version: 1.21.2
+  - projects:
+      - hash: 59d629ed4c7bb29ea718db9ffb496eb4b6cbe46e
+        repo: openstack/openstackdocstheme
+    version: 1.22.0
 repository-settings:
   openstack/openstackdocstheme: {}
