networking-hyperv: release 7.0.0 for Rocky
Adds networking-hyperv 7.0.0 release for Rocky.
Adds the stable/rocky branch for networking-hyperv.

Change-Id: I039b690f0013f6a76417596f0cc5c767d98ceee6

--- a/deliverables/rocky/networking-hyperv.yaml
+++ b/deliverables/rocky/networking-hyperv.yaml
@@ -4,5 +4,13 @@ launchpad: networking-hyperv
 release-model: cycle-with-intermediary
 team: winstackers
 type: other
+releases:
+  - projects:
+      - repo: openstack/networking-hyperv
+        hash: d49d70cc5420e8cc39b50e4950789ac6a11c65cb
+    version: 7.0.0
+branches:
+  - location: 7.0.0
+    name: stable/rocky
 repository-settings:
   openstack/networking-hyperv: {}
