--- a/deliverables/rocky/solum-tempest-plugin.yaml
+++ b/deliverables/rocky/solum-tempest-plugin.yaml
@@ -7,3 +7,8 @@ repository-settings:
   openstack/solum-tempest-plugin: {}
 team: solum
 type: tempest-plugin
+releases:
+  - version: 0.1.0
+    projects:
+      - repo: openstack/solum-tempest-plugin
+        hash: 900f4870a53bf28b42eaf44797202edd3740f9ae
