--- a/deliverables/rocky/osc-lib.yaml
+++ b/deliverables/rocky/osc-lib.yaml
@@ -15,6 +15,10 @@ releases:
       - hash: 8d28a59c43414e8671e660781d534c8b3f942b38
         repo: openstack/osc-lib
     version: 1.11.0
+  - projects:
+      - hash: a66f37d09d49677bc774157a19bb3f0e9781a179
+        repo: openstack/osc-lib
+    version: 1.11.1
 branches:
   - location: 1.11.0
     name: stable/rocky
