Create stable/rocky for devstack
This commit cut the rocky branch for devstack

Next step will be on devstack side to complete
the step 3&4 mentioned in https://releases.openstack.org/reference/process.html#rc1

Change-Id: I905f88eb2247b6aedbf27c52c8e6225be9d28082

--- a/deliverables/rocky/devstack.yaml
+++ b/deliverables/rocky/devstack.yaml
@@ -4,5 +4,9 @@ release-model: untagged
 team: 'Quality Assurance'
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack-dev/devstack: 8c1052001629d62f001d04c182500fa293858f47
+    name: stable/rocky
 repository-settings:
   openstack-dev/devstack: {}
