Create stable/rocky for grenade
This commit cut the rocky branch for grenade

Next step will be on grenade/devstack-gate side to complete
the step 5 mentioned in https://releases.openstack.org/reference/process.html#rc1

Change-Id: I575477578744e8ea071ce44cf26be451515c2419

--- a/deliverables/rocky/grenade.yaml
+++ b/deliverables/rocky/grenade.yaml
@@ -4,5 +4,9 @@ release-model: untagged
 team: 'Quality Assurance'
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack-dev/grenade: dc7f4a4ba5697d5a73a1e656d4a1717964324eab
+    name: stable/rocky
 repository-settings:
   openstack-dev/grenade: {}
