--- a/deliverables/rocky/zun.yaml
+++ b/deliverables/rocky/zun.yaml
@@ -8,5 +8,12 @@ releases:
     projects:
       - repo: openstack/zun
         hash: 5b4777df198d2e9ae970f1bbf616eafb29abd8b4
+  - version: 2.1.0
+    projects:
+      - repo: openstack/zun
+        hash: c3418885fa7d13a1f4f6da247b3c973247dd75a2
+branches:
+  - name: stable/rocky
+    location: 2.1.0
 repository-settings:
   openstack/zun: {}
