Tag Rocky release of octavia-tempest-plugin
Change-Id: I85c3ad12e263f4d19fb4a8c9a0f9dff44faec964

--- a/deliverables/rocky/octavia-tempest-plugin.yaml
+++ b/deliverables/rocky/octavia-tempest-plugin.yaml
@@ -7,3 +7,8 @@ repository-settings:
 storyboard: 908
 team: octavia
 type: tempest-plugin
+releases:
+  - version: 0.1.0
+    projects:
+      - repo: openstack/octavia-tempest-plugin
+        hash: 904a4481c9d44b8c784d11d3208cc6b8492124fb
