--- a/deliverables/rocky/devstack-plugin-container.yaml
+++ b/deliverables/rocky/devstack-plugin-container.yaml
@@ -4,5 +4,9 @@ release-model: untagged
 team: 'Quality Assurance'
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack/devstack-plugin-container: 54aa82d99f09f630d0b969d3f9e2001b00541982
+    name: stable/rocky
 repository-settings:
   openstack/devstack-plugin-container: {}
