Tag congress-tempest-plugin for Rocky
Change-Id: I88d89e46dda875ab9b41e8efb628bfb3607c7651

--- a/deliverables/rocky/congress-tempest-plugin.yaml
+++ b/deliverables/rocky/congress-tempest-plugin.yaml
@@ -7,3 +7,8 @@ repository-settings:
   openstack/congress-tempest-plugin: {}
 team: congress
 type: tempest-plugin
+releases:
+  - version: 0.1.0
+    projects:
+      - repo: openstack/congress-tempest-plugin
+        hash: 284000148ee2e1e8625189fdf423d6d1099b787f
