--- a/deliverables/rocky/tacker.yaml
+++ b/deliverables/rocky/tacker.yaml
@@ -3,10 +3,13 @@ launchpad: tacker
 release-model: cycle-with-intermediary
 team: tacker
 type: service
-repository-settings:
-  openstack/tacker: {}
+branches:
+  - name: stable/rocky
+    location: 0.10.0
 releases:
   - version: 0.10.0
     projects:
       - repo: openstack/tacker
         hash: 5987ad8c56a61e3a6d8fcf37a2557926c585de41
+repository-settings:
+  openstack/tacker: {}
