--- a/deliverables/rocky/glance.yaml
+++ b/deliverables/rocky/glance.yaml
@@ -41,5 +41,9 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 688426625171264f0bc2c56f496a4ce13a3de93f
+  - version: 17.0.0.0rc2
+    projects:
+      - repo: openstack/glance
+        hash: 488d2e4fccc399234fd62c127c8ece262111fe93
 repository-settings:
   openstack/glance: {}
